--- a/VPN post.html
+++ b/VPN post.html
@@ -21,7 +21,7 @@
     <main>
         <h1>O que é uma conexão via VPN</h1>
         
-        <img class="home" style="margin-bottom: 10px;" src="image/img grande.jpg" alt="">
+        <img class="home" style="margin-bottom: 10px;" src="image/img grande.jpg" width="600px" alt="">
         <p>Uma VPN, ou rede privada virtual, canaliza suas informações do ponto A (você) para o ponto B em sigilo. “Navegar na web ou fazer transações em uma rede Wi-Fi desprotegida significa que você pode expor suas informações privadas e hábitos de navegação”, de acordo com a Norton, uma empresa que produz antivírus e software de segurança. Ele chama as VPNs de “uma obrigação para qualquer pessoa preocupada com sua segurança e privacidade online.</p>
        
         <p>Seu endereço IP é o seu “nome” ou ID que transmite quem e onde você está - suas coordenadas digitais, se preferir. Uma VPN criptografa, ou converte em código, seu endereço IP e quaisquer dados que você enviar e, em seguida, os descriptografa na extremidade receptora. Isso pode fazer parecer que sua conexão está vindo de outro país, o que pode desbloquear alguns sites com restrição geográfica.</p>
