--- a/VPN post.html
+++ b/VPN post.html
@@ -10,7 +10,7 @@
 </head>
 <body>
     <header>
-        <img id="img_header" src="image/RA logo.png" width="330px" height="70px" alt="">
+        <img src="image/RA logo.png" width="330px" height="70px" alt="">
        
             <nav class="navegation">
                 <a href="#">home</a>
