--- a/VPN post.html
+++ b/VPN post.html
@@ -12,7 +12,7 @@
     <header>
         <img src="image/RA logo.png" width="330px" height="70px" alt="">
        
-            <nav class="navegation">
+            <nav>
                 <a href="#">home</a>
                 <a href="#">Artigos</a>
                 <a href="#">About</a>
