--- a/VPN post.html
+++ b/VPN post.html
@@ -10,8 +10,7 @@
 </head>
 <body>
     <header>
-        <img src="image/RA logo.png" width="330px" height="70px" alt="">
-       
+       <div class="config_logo"></div>
             <nav>
                 <a href="#">home</a>
                 <a href="#">Artigos</a>
