--- a/VPN post.html
+++ b/VPN post.html
@@ -40,6 +40,8 @@
         <p>Suas senhas, histórico médico, conversas privadas, informações financeiras e muito mais não são da sua conta, apenas. Usar uma VPN ao conduzir qualquer tipo de negócio pessoal protege suas informações de hackers enquanto você está conectado a uma rede pública.</p>
         <p>VPNs também são úteis para conduzir negócios. Independentemente de você trabalhar remotamente ou como freelance em uma cafeteria, uma VPN é uma ótima maneira de garantir que seu negócio seja mantido seguro e que as informações proprietárias não sejam interceptadas por olhos curiosos. Se você possui uma empresa e seus funcionários estão usando Wi-Fi público ou uma rede doméstica insegura, uma VPN confiável dá suporte ao seu negócio com uma política de privacidade abrangente e garante que a atividade de Internet da sua empresa não seja armazenada ou gravada em qualquer lugar.
         </p>
+
+        <a href="nfts_post.html">check new post</a>
     </main>
     <footer>
         <p>©2021 Pedro Guimarães Rosa | Todos os direitos reservados</p>
