coloquei mais conteúdos

--- a/nfts_post.html
+++ b/nfts_post.html
@@ -34,7 +34,26 @@
         </p>
         <h2>What’s worth picking up at the NFT supermarket?</h2>
         <p>NFTs can really be anything digital (such as drawings, music, your brain downloaded and turned into an AI), but a lot of the current excitement is around using the tech to sell digital art.</p>
-        <div id="gif"></div>
+        <div id="dog"><img src="img-post-nft/doge.gif" alt=""></div>
+        <h2>You mean, like, people buying my good tweets?</h2>
+        <p>I don’t think anyone can stop you, but that’s not really what I meant. A lot of the conversation is about NFTs as an evolution of fine art collecting, only with digital art.
+            (Side note, when coming up with the line “buying my good tweets,” we were trying to think of something so silly that it wouldn’t be a real thing. So of course the founder of Twitter sold one for just under $3 million shortly after we posted the article.)
+        </p>
+
+        <h2>Do people really think this will become like art collecting?</h2>
+        <p>I’m sure some people really hope so — like whoever paid almost $390,000 for a 50-second video by Grimes or the person who paid $6.6 million for a video by Beeple. Actually, one of Beeple’s pieces was auctioned at Christie’s, the famou—</p>
+
+        <div id="baby"><img src="img-post-nft/baby.PNG" alt=""></div>
+
+        <h2>Sorry, I was busy right-clicking on that Beeple video and downloading the same file the person paid millions of dollars for.</h2>
+
+        <p>Wow, rude. But yeah, that’s where it gets a bit awkward. You can copy a digital file as many times as you want, including the art that’s included with an NFT.
+            But NFTs are designed to give you something that can’t be copied: ownership of the work (though the artist can still retain the copyright and reproduction rights, just like with physical artwork). To put it in terms of physical art collecting: anyone can buy a Monet print. But only one person can own the original.
+        </p>
+
     </main>
+    <footer>
+        <p>©2021 Pedro Guimarães Rosa | Todos os direitos reservados</p>
+    </footer>
 </body>
 </html>
