--- a/nfts_post.html
+++ b/nfts_post.html
@@ -20,7 +20,7 @@
     <main>
         <h1>NFTs, explained</h1>
         <p> I have questions about this emerging... um... art form? Platform?</p>
-        <div id="cat"></div>
+        <div id="john"></div>
         <p>There’s nothing like an explosion of blockchain news to leave you thinking, “Um… what’s going on here?” That’s the feeling I’ve experienced while reading about Grimes getting millions of dollars for NFTs or about Nyan Cat being sold as one. And by the time we all thought we sort of knew what the deal was, the founder of Twitter put an autographed tweet up for sale as an NFT. Now, months after we first published this explainer, we’re still seeing headlines about people paying house-money for clip art of rocks — and my mom still doesn’t really understand what an NFT is.</p>
         <p>You might be wondering: what is an NFT, anyhow?</p>
         <p>After literal hours of reading, I think I know. I also think I’m going to cry.</p>
@@ -34,7 +34,7 @@
         </p>
         <h2>What’s worth picking up at the NFT supermarket?</h2>
         <p>NFTs can really be anything digital (such as drawings, music, your brain downloaded and turned into an AI), but a lot of the current excitement is around using the tech to sell digital art.</p>
-        <div id="dog"><img src="img-post-nft/doge.gif" alt=""></div>
+        <div class="image"><img src="img-post-nft/doge.gif" alt=""></div>
         <h2>You mean, like, people buying my good tweets?</h2>
         <p>I don’t think anyone can stop you, but that’s not really what I meant. A lot of the conversation is about NFTs as an evolution of fine art collecting, only with digital art.
             (Side note, when coming up with the line “buying my good tweets,” we were trying to think of something so silly that it wouldn’t be a real thing. So of course the founder of Twitter sold one for just under $3 million shortly after we posted the article.)
@@ -43,7 +43,7 @@
         <h2>Do people really think this will become like art collecting?</h2>
         <p>I’m sure some people really hope so — like whoever paid almost $390,000 for a 50-second video by Grimes or the person who paid $6.6 million for a video by Beeple. Actually, one of Beeple’s pieces was auctioned at Christie’s, the famou—</p>
 
-        <div id="baby"><img src="img-post-nft/baby.PNG" alt=""></div>
+        <div class="image"><img src="img-post-nft/baby.PNG" alt=""></div>
 
         <h2>Sorry, I was busy right-clicking on that Beeple video and downloading the same file the person paid millions of dollars for.</h2>
 
