--- a/VPN post.html
+++ b/VPN post.html
@@ -42,6 +42,7 @@
         </p>
 
         <a href="nfts_post.html">check new post</a>
+        <a href="home.html"> check new home</a>
     </main>
     <footer>
         <p>©2021 Pedro Guimarães Rosa | Todos os direitos reservados</p>
