--- a/home.html
+++ b/home.html
@@ -4,39 +4,37 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Reader Anonymous</title>
     <link rel="stylesheet" href="home.css">
 </head>
 <body>
     <header>
-        <div id="inicio">
-            <div id="paragrafo">
-                <div id="text-image">
-                    <p>Welcome to Anonymous Reader</p>
-                </div>
-            </div>
-        </div>
+        <h1>Reader Anonymous</h1>
+        <p>Conteúdo fora da caixa</p>
+    <nav>
+        <a href="#">Home</a>
+        <a href="#">About</a>
+        <a href="#">contact</a>
+    </nav>
     </header>
-    <div class="box" id="box1">
-
-    </div>
-    <div class="box" id="box2">
-
-    </div>
-    <div class="box" id="box3">
-
-    </div>
-
-    <div class="box" id="box3">
-
-    </div>
-
     <main>
-        <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Placeat quidem corporis voluptatem? Ad quod vitae accusamus nihil expedita corrupti explicabo ipsum ratione debitis aperiam odio quo, at animi provident sapiente. Lorem ipsum dolor sit amet consectetur, adipisicing elit. Nobis tempore similique quam asperiores quas, id tenetur, laboriosam voluptatem doloremque sequi accusantium minus, quidem omnis dolore. A minima deserunt in nesciunt.lorem Lorem ipsum dolor sit amet, consectetur adipisicing elit. Earum aperiam accusantium, consectetur hic maxime et eius quis cumque vel tempora placeat asperiores corrupti ut sapiente unde, in atque eos inventore. Lorem ipsum dolor sit amet consectetur, adipisicing elit. Nisi ea et eveniet similique numquam eligendi ut, magnam voluptates consequuntur porro! Impedit dolore adipisci, voluptatibus aliquid molestiae amet recusandae sequi voluptas! Lorem ipsum dolor sit amet consectetur adipisicing elit. Earum in expedita minima veniam quae ipsa cumque aperiam commodi dolores incidunt sapiente facere illum iste id, repudiandae provident aliquid odio eveniet?</p>
-        <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Placeat quidem corporis voluptatem? Ad quod vitae accusamus nihil expedita corrupti explicabo ipsum ratione debitis aperiam odio quo, at animi provident sapiente. Lorem ipsum dolor sit amet consectetur, adipisicing elit. Nobis tempore similique quam asperiores quas, id tenetur, laboriosam voluptatem doloremque sequi accusantium minus, quidem omnis dolore. A minima deserunt in nesciunt.lorem Lorem ipsum dolor sit amet, consectetur adipisicing elit. Earum aperiam accusantium, consectetur hic maxime et eius quis cumque vel tempora placeat asperiores corrupti ut sapiente unde, in atque eos inventore. Lorem ipsum dolor sit amet consectetur, adipisicing elit. Nisi ea et eveniet similique numquam eligendi ut, magnam voluptates consequuntur porro! Impedit dolore adipisci, voluptatibus aliquid molestiae amet recusandae sequi voluptas! Lorem ipsum dolor sit amet consectetur adipisicing elit. Earum in expedita minima veniam quae ipsa cumque aperiam commodi dolores incidunt sapiente facere illum iste id, repudiandae provident aliquid odio eveniet?</p>
-        <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Placeat quidem corporis voluptatem? Ad quod vitae accusamus nihil expedita corrupti explicabo ipsum ratione debitis aperiam odio quo, at animi provident sapiente. Lorem ipsum dolor sit amet consectetur, adipisicing elit. Nobis tempore similique quam asperiores quas, id tenetur, laboriosam voluptatem doloremque sequi accusantium minus, quidem omnis dolore. A minima deserunt in nesciunt.lorem Lorem ipsum dolor sit amet, consectetur adipisicing elit. Earum aperiam accusantium, consectetur hic maxime et eius quis cumque vel tempora placeat asperiores corrupti ut sapiente unde, in atque eos inventore. Lorem ipsum dolor sit amet consectetur, adipisicing elit. Nisi ea et eveniet similique numquam eligendi ut, magnam voluptates consequuntur porro! Impedit dolore adipisci, voluptatibus aliquid molestiae amet recusandae sequi voluptas! Lorem ipsum dolor sit amet consectetur adipisicing elit. Earum in expedita minima veniam quae ipsa cumque aperiam commodi dolores incidunt sapiente facere illum iste id, repudiandae provident aliquid odio eveniet?</p>
-        <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Placeat quidem corporis voluptatem? Ad quod vitae accusamus nihil expedita corrupti explicabo ipsum ratione debitis aperiam odio quo, at animi provident sapiente. Lorem ipsum dolor sit amet consectetur, adipisicing elit. Nobis tempore similique quam asperiores quas, id tenetur, laboriosam voluptatem doloremque sequi accusantium minus, quidem omnis dolore. A minima deserunt in nesciunt.lorem Lorem ipsum dolor sit amet, consectetur adipisicing elit. Earum aperiam accusantium, consectetur hic maxime et eius quis cumque vel tempora placeat asperiores corrupti ut sapiente unde, in atque eos inventore. Lorem ipsum dolor sit amet consectetur, adipisicing elit. Nisi ea et eveniet similique numquam eligendi ut, magnam voluptates consequuntur porro! Impedit dolore adipisci, voluptatibus aliquid molestiae amet recusandae sequi voluptas! Lorem ipsum dolor sit amet consectetur adipisicing elit. Earum in expedita minima veniam quae ipsa cumque aperiam commodi dolores incidunt sapiente facere illum iste id, repudiandae provident aliquid odio eveniet?</p>
+        <div class="box" id="box1">
+            <p>Entenda o que é um VPN</p>
+        </div>
+
+        <div class="box" id="box2">
+            <p>entenda o que é um NFT</p>
+        </div>
+        <div class="box" id="box3">
+            <p>Entenda a importancia da Meditação</p>
+        </div>
+
+        <h2>Por Que Criamos o Leitores Anônimos </h2>
+        <p>Leitores Anônimos foi criado com o intuito de proporcionar conhecimentos avançados de maneira didática e simples. Poucas pessoas no Brasil tem acesso a uma ampla base de conteúdos <strong>FUNDAMENTAIS</strong> para o desenvolvimento e entendimento de certas áreas da nossa vida</p>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Cum possimus eveniet aliquid ducimus maxime magnam! Blanditiis delectus deleniti, nihil doloremque harum ipsa, provident nisi maiores quae eaque vero, amet ipsum. Lorem ipsum dolor sit amet consectetur adipisicing elit. At autem, voluptates magni nam quidem perferendis error, eaque nesciunt nostrum omnis et provident. Dolor totam dolore voluptatum, ea autem repellendus sit. Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolorem ipsa iusto soluta reiciendis. Rerum quos voluptatibus iusto quia, molestias et voluptate ea, neque dolorum dignissimos distinctio sint deserunt labore maiores?</p>
     </main>
-    
+    <footer>
+        <p>criado por Reader Anonymous | Todos os direitos Reservados.</p>
+    </footer>
 </body>
 </html>
