--- a/home.html
+++ b/home.html
@@ -19,18 +19,50 @@
     </header>
     <main>
         <div class="box" id="box1">
-            <p>Entenda o que é um VPN</p>
+            <p><a href="#">O que não te falaram sobre amizade</a></p>
         </div>
 
         <div class="box" id="box2">
-            <p>entenda o que é um NFT</p>
+            <p><a href="#">networking</a></p>
         </div>
         <div class="box" id="box3">
-            <p>Entenda a importancia da Meditação</p>
+            <p><a href="#">programas de bloqueios de conteúdo</a></p>
+        </div>
+        <div class="box" id="box4">
+            <p><a href="#">O que não te falaram sobre amizade</a></p>
+        </div>
+
+        <div class="box" id="box5">
+            <p><a href="#">networking</a></p>
+        </div>
+        <div class="box" id="box6">
+            <p><a href="#">programas de bloqueios de conteúdo</a></p>
         </div>
         <h2>Por Que Criamos o Leitores Anônimos </h2>
         <p>Leitores Anônimos foi criado com o intuito de proporcionar conhecimentos avançados de maneira didática e simples. Poucas pessoas no Brasil tem acesso a uma ampla base de conteúdos <strong>FUNDAMENTAIS</strong> para o desenvolvimento e entendimento de certas áreas da nossa vida</p>
         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Cum possimus eveniet aliquid ducimus maxime magnam! Blanditiis delectus deleniti, nihil doloremque harum ipsa, provident nisi maiores quae eaque vero, amet ipsum. Lorem ipsum dolor sit amet consectetur adipisicing elit. At autem, voluptates magni nam quidem perferendis error, eaque nesciunt nostrum omnis et provident. Dolor totam dolore voluptatum, ea autem repellendus sit. Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolorem ipsa iusto soluta reiciendis. Rerum quos voluptatibus iusto quia, molestias et voluptate ea, neque dolorum dignissimos distinctio sint deserunt labore maiores?</p>
+
+        <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Quibusdam labore iusto tenetur eligendi adipisci repudiandae, eos eius, error perferendis alias, odio tempore harum necessitatibus consequatur cum! Necessitatibus ex laborum deserunt!
+            Lorem, ipsum dolor sit amet consectetur adipisicing elit. Explicabo quas deserunt ipsum consequatur neque obcaecati! Atque corrupti nam quo repellat illo suscipit distinctio, quis nemo recusandae? Vero voluptas tempore assumenda?
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Quibusdam ut eos impedit quod commodi, repudiandae tenetur, beatae quas unde, dolorem est? Labore repellendus expedita magni esse ducimus pariatur veniam et?
+        </p>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptatibus quis qui autem exercitationem fugiat, repellendus optio! Natus ut libero dolorum, sapiente ad qui nihil vel inventore, eaque veritatis culpa iste. Lorem ipsum dolor sit amet consectetur adipisicing elit. Corporis delectus doloremque cum dolorum rem quidem iusto fugiat expedita nemo dignissimos! Quis obcaecati veritatis ipsum libero harum. Molestiae aliquam impedit alias.
+        </p>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptatibus quis qui autem exercitationem fugiat, repellendus optio! Natus ut libero dolorum, sapiente ad qui nihil vel inventore, eaque veritatis culpa iste. Lorem ipsum dolor sit amet consectetur adipisicing elit. Corporis delectus doloremque cum dolorum rem quidem iusto fugiat expedita nemo dignissimos! Quis obcaecati veritatis ipsum libero harum. Molestiae aliquam impedit alias.
+        </p>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptatibus quis qui autem exercitationem fugiat, repellendus optio! Natus ut libero dolorum, sapiente ad qui nihil vel inventore, eaque veritatis culpa iste. Lorem ipsum dolor sit amet consectetur adipisicing elit. Corporis delectus doloremque cum dolorum rem quidem iusto fugiat expedita nemo dignissimos! Quis obcaecati veritatis ipsum libero harum. Molestiae aliquam impedit alias.
+        </p>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptatibus quis qui autem exercitationem fugiat, repellendus optio! Natus ut libero dolorum, sapiente ad qui nihil vel inventore, eaque veritatis culpa iste. Lorem ipsum dolor sit amet consectetur adipisicing elit. Corporis delectus doloremque cum dolorum rem quidem iusto fugiat expedita nemo dignissimos! Quis obcaecati veritatis ipsum libero harum. Molestiae aliquam impedit alias.
+        </p>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptatibus quis qui autem exercitationem fugiat, repellendus optio! Natus ut libero dolorum, sapiente ad qui nihil vel inventore, eaque veritatis culpa iste. Lorem ipsum dolor sit amet consectetur adipisicing elit. Corporis delectus doloremque cum dolorum rem quidem iusto fugiat expedita nemo dignissimos! Quis obcaecati veritatis ipsum libero harum. Molestiae aliquam impedit alias.
+        </p>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptatibus quis qui autem exercitationem fugiat, repellendus optio! Natus ut libero dolorum, sapiente ad qui nihil vel inventore, eaque veritatis culpa iste. Lorem ipsum dolor sit amet consectetur adipisicing elit. Corporis delectus doloremque cum dolorum rem quidem iusto fugiat expedita nemo dignissimos! Quis obcaecati veritatis ipsum libero harum. Molestiae aliquam impedit alias.
+        </p>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptatibus quis qui autem exercitationem fugiat, repellendus optio! Natus ut libero dolorum, sapiente ad qui nihil vel inventore, eaque veritatis culpa iste. Lorem ipsum dolor sit amet consectetur adipisicing elit. Corporis delectus doloremque cum dolorum rem quidem iusto fugiat expedita nemo dignissimos! Quis obcaecati veritatis ipsum libero harum. Molestiae aliquam impedit alias.
+        </p>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptatibus quis qui autem exercitationem fugiat, repellendus optio! Natus ut libero dolorum, sapiente ad qui nihil vel inventore, eaque veritatis culpa iste. Lorem ipsum dolor sit amet consectetur adipisicing elit. Corporis delectus doloremque cum dolorum rem quidem iusto fugiat expedita nemo dignissimos! Quis obcaecati veritatis ipsum libero harum. Molestiae aliquam impedit alias.
+        </p>
+
     </main>
     <footer>
         <p>criado por Reader Anonymous | Todos os direitos Reservados.</p>
