--- a/VPN post.html
+++ b/VPN post.html
@@ -43,6 +43,7 @@
 
         <a href="nfts_post.html">check new post</a>
         <a href="home.html"> check new home</a>
+        <a href="friends.html">check now</a>
     </main>
     <footer>
         <p>©2021 Pedro Guimarães Rosa | Todos os direitos reservados</p>
