config on post friendship

--- a/friends.html
+++ b/friends.html
@@ -28,8 +28,17 @@
         <h3>Friends Share the Load</h3>
         <p>How powerful is friendship? Researchers at the University of Virginia wanted to find out whether friendship influences how we approach the challenges of daily life. In an unusual experiment, researchers stood at the base of a steep hill (a 26 degree incline) on the university campus and asked 34 students as they walked by to help them in an experiment. Some students were by themselves; others were walking in pairs. </p>
         <p>Each student was given a backpack filled with weights equal to about 20 percent of their body weight. While the students may have had the impression they were going to have to climb the hill, the researchers simply asked them to estimate how steep the climb would be. 
-
         </p>
+        <h2>Friends With Health Benefits</h2>
+        <p>Most of the research on health and relationships is focused on romantic partners. But researchers have found that our friendships actually have a bigger impact on our health. Here are some of the findings about the health benefits of having friends:</p>
+        <aside>
+            <h3 style="text-align: center; font-family: Arial, Helvetica, sans-serif; font-size: 30px; padding: 10px;">but about friendship</h3>
+            <ul>
+                <li>A 10-year Australian study found that older people with a large circle of friends were 22 percent less likely to die during the study period than those with fewer friends.</li>
+                <li>In 2006, a study of nearly 3,000 nurses with breast cancer found that women without close friends were four times as likely to die from the disease as women with 10 or more friends. Notably, proximity and the amount of contact with a friend wasn’t associated with survival. Just having friends was protective. Having a spouse wasn’t associated with survival.</li>
+                <li>In a six-year study of 736 middle-age Swedish men, being attached to a life partner didn’t affect the risk of heart attack and fatal coronary heart disease, but having friendships did. Among risk factors for cardiovascular health, lacking social support was as bad as smoking.</li>
+            </ul>
+        </aside>
     </main>
 
     <footer>
