configurações no css

--- a/friends.html
+++ b/friends.html
@@ -9,7 +9,7 @@
 </head>
 <body>
     <header>
-        <h1>NewYork Times</h1>
+        <h1>NewYork Times &#9994;</h1>
              <nav>
                  <a href="#">home</a>
                  <a href="#">Artigos</a>
@@ -33,11 +33,13 @@
         <p>Most of the research on health and relationships is focused on romantic partners. But researchers have found that our friendships actually have a bigger impact on our health. Here are some of the findings about the health benefits of having friends:</p>
         <aside>
             <h3 style="text-align: center; font-family: Arial, Helvetica, sans-serif; font-size: 30px; padding: 10px;">but about friendship</h3>
-            <ul>
-                <li>A 10-year Australian study found that older people with a large circle of friends were 22 percent less likely to die during the study period than those with fewer friends.</li>
-                <li>In 2006, a study of nearly 3,000 nurses with breast cancer found that women without close friends were four times as likely to die from the disease as women with 10 or more friends. Notably, proximity and the amount of contact with a friend wasn’t associated with survival. Just having friends was protective. Having a spouse wasn’t associated with survival.</li>
-                <li>In a six-year study of 736 middle-age Swedish men, being attached to a life partner didn’t affect the risk of heart attack and fatal coronary heart disease, but having friendships did. Among risk factors for cardiovascular health, lacking social support was as bad as smoking.</li>
-            </ul>
+            <div class="lista">
+                <ul>
+                    <li>A 10-year Australian study found that older people with a large circle of friends were 22 percent less likely to die during the study period than those with fewer friends.</li>
+                    <li>In 2006, a study of nearly 3,000 nurses with breast cancer found that women without close friends were four times as likely to die from the disease as women with 10 or more friends. Notably, proximity and the amount of contact with a friend wasn’t associated with survival. Just having friends was protective. Having a spouse wasn’t associated with survival.</li>
+                    <li>In a six-year study of 736 middle-age Swedish men, being attached to a life partner didn’t affect the risk of heart attack and fatal coronary heart disease, but having friendships did. Among risk factors for cardiovascular health, lacking social support was as bad as smoking.</li>
+                </ul>
+            </div>
         </aside>
     </main>
 
